Resolved overflow issue

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -79,7 +79,7 @@ html {
     margin-right: auto;
 }
 body {
-    width: 100%;
+    width: 1024px;
     height: 95%;
     margin: 0px;
     padding: 0px;
